# rpc

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
scripts/: build.sh
src/: auto_launch.rs  config.rs  instance.rs  logging.rs  main.rs  rpc.rs  tray.rs  ui.rs  updater.rs
